--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-router": "^6.15.0",
+    "react-router-dom": "^6.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
